--- a/application.yml
+++ b/application.yml
@@ -3,12 +3,12 @@ spring:
     active:
     - dev
 ---
-spring：
+spring:
   profiles: dev        #开发环境
   application:
     name: microservicecloud-config-dev
 ---
-spring：
+spring:
   profiles: test        #测试环境
   application:
     name: microservicecloud-config-test
